--- a/css/style.css
+++ b/css/style.css
@@ -1,62 +1,64 @@
-.header{
-	height: 50px;
-	background-color: red;
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+
+/*common css start*/
+body{
+	margin: 0;
+	font-family:"Playfair Display", serif;
+	font-size:16px ;
+	font-weight:400;
+	color:#626262;
 }
-.wrapper{
-	overflow: hidden;
+/*common css end*/
+/*header start*/
+header{
+     border: 1px solid;
+     padding: 30px 0;
 }
-.blog{
+.container{
+	margin: 0 auto;
+    width: 90%;
+    /*border: 1px solid;*/
+    overflow: hidden;
+}
+.logo{
+	margin-top: 10px;
+	width: 11%;
+	/*border: 1px solid;*/
 	float: left;
-	width: 70%;
-	height: 200px;
-	background-color: green;
+
 }
-.contact{
+.logo a img{
+	width: 100%;
+
+}
+.menu{
+	width: 65%;
+	/*border: 1px solid;*/
 	float: right;
-	width: 30%;
-	height: 200px;
-	background-color: blue;
 }
-
-.box{
+.menu ul{
+	list-style: none;
+    float: right;
+}
+.menu ul li{
 	float: left;
-	width: 33.33%;
-	height: 150px;
 }
-.item1{
-	background-color: pink;
+.menu ul li a{
+	display: inline-block;
+	margin: 0 50px;
+	color:#626262 ;
+	text-decoration: none;
+	text-transform: uppercase;
+	border-bottom: 1px solid transparent;
+	transition: .33s linear;
 }
-.item2{
-	background-color: gray;
+.menu ul li:last-child a{
+    margin-right: 0px;
 }
-.item3{
-	background-color: teal;
-}
-.footer{
-	height: 100px;
-	background-color: black;
-}
+.menu ul li a:hover{
+	border-bottom: 1px solid #000000;
 
-.intro{
-	background-color: yellow;
 }
-
-#first_name{
-	background-color: green;
-}
-
-p ~ ul {
-	background: #ff0000;
-}
-
-a[target]{
-	background-color: yellow;
-}
-
-[title~="flower"]{
-	border: solid red;
-}
-
-[lang|="en"] {
-  background: yellow;
-
+/*header end*/
