--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header{
 .container{
 	margin: 0 auto;
     width: 90%;
-    /*border: 1px solid;*/
+    border: 1px solid;
     overflow: hidden;
 }
 .logo{
@@ -62,3 +62,129 @@ header{
 
 }
 /*header end*/
+
+
+/*banner start*/
+.banner{}
+.b_img{}
+.b_img img{
+	width: 100%;
+}
+
+/*getaway start*/
+.getaway{
+	padding: 100px 0;
+}
+.container2{
+	width: 80%;
+	margin: 0 auto;
+	/*border: 1px solid;*/
+}
+.g_content{}
+.light{
+	font-family: "ubuntu", sans-serif;
+	font-size: 14px;
+	font-weight: 300;
+	text-transform: uppercase;
+}
+.title{
+
+	margin: 20px 0 30px;
+	font-size: 30px;
+	font-weight:400;
+}
+.text{
+	margin: 0;
+	line-height: 24px;
+}
+.g_link{
+	margin-top: 50px;
+	display: inline-block;
+	color: #626262;
+	text-decoration: none;
+}
+
+/*getaway end*/
+
+/*banner end*/
+
+/*blog start*/
+
+.blog{
+	padding: 0 0 100px;
+}
+.blog_content{
+	overflow: hidden;
+}
+.b_single{
+	width: 47%;
+	/*border: 1px solid;*/
+	float: left;
+	margin-bottom: 120px;
+	
+}
+.b_single:nth-child(even){
+	margin-left: 6%;	
+}
+
+.blog_img{
+	margin-bottom: 20px;
+}
+.blog_img img{
+	width: 100%;
+}
+
+/*blog end*/
+/*news start*/
+
+.news{
+	background-color: #f0f0f0;
+	padding: 70px 0;
+}
+.signup{
+	text-align: center;
+}
+.s_h2{
+	color: #333333;wnhiop898888888888888888
+	margin-top: 0;
+	margin-bottom: 70px;
+
+}
+.s_form{
+	width: 400px;
+	/*border: 5px solid red;*/
+	margin: 0 auto;
+	position: relative;
+}
+.s_form input{
+	font-family:"Playfair Display", serif ;
+	font-size: 14px;
+	color:#626262 ;
+	width: 345px;
+	height: 45px;
+	border: none;
+	border-bottom: 1px solid #000000;
+	background-color: transparent;
+	padding-left: 5px;
+	padding-right: 45px;
+
+}
+.s_form input:focus{
+	outline: 0;
+}
+.s_form button{
+	position: absolute;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	top: 15px;
+	right: 0;
+}
+
+.s_form button:focus{
+	outline: 0;
+	}
+.s_form button img{}
+
+
+/*news end*/
